Fix a bug that GPU process may fail to launch in RDP sessions

Chrome calls EnumDisplayDevices() to get details about display devices.
On some Windows machines EnumDisplayDevices() can only get the mirror
driver "RDPUDD Chained DD" with empty DeviceID and no physical display
devices when Chrome is opened in a Remote Desktop session, which will
cause the failure of launching the GPU process.

This patch fixes this issue by skipping the check of DeviceID when the
primary display device is "RDPUDD Chained DD" according to the result
of EnumDisplayDevices() so that Chrome can obtain GPU information
afterwards (in CollectDriverInfoD3D()).

BUG=671539
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2557513005
Cr-Commit-Position: refs/heads/master@{#437492}

Former-commit-id: f406d19447ab1352ce2b2b6e260a0b9d2e4a9e41